# tv-moderno-limpo

./: .env.example  .gitignore  .prettierignore  AGENTS.md  AI_HANDOFF.md  App.tsx  HANDOFF_IA.md  LegacyApp.tsx  PLANO_NIVEL_NETFLIX.md  README.md  UsersFabricioAppDataLocalTemppreview_test.html  _cdp_debug.mjs  animations.css  capacitor.config.json  cc1.md  cypress.config.ts  eslint.config.js  fresh_log_tv_8.txt  full_log_tv_8.txt  index.css  index.html  index.tsx  log_diagnostico_192.168.0.4.txt  log_diagnostico_192.168.0.4_utf8.txt  log_diagnostico_192.168.0.8.txt  log_diagnostico_192.168.0.8_utf8.txt  log_dump_4.txt  log_dump_4_utf8.txt  log_dump_8.txt  log_dump_8_utf8.txt  log_tcl_adb_20260522_115037.txt  log_tcl_adb_20260522_115037_RESUMO.txt  log_tcl_adb_20260522_115037_errors.txt  logcat-full.txt  logcat-tcl-current.txt  modern-home.css  package-lock.json  package.json  playwright.config.ts  redx-bg.css  (+17 more)
android/: build.gradle  gradle.properties  local.properties.example  variables.gradle
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
auditoria-canais-android-tv/: canais-adb-logcat.txt  canais-arquivos-encontrados.md  canais-plano-correcao.md  canais-resumo-bug.md
captures/: cdp.mjs  cdpf.mjs
components/: ActionModal.tsx  AdminLoginModal.tsx  AdminRoute.tsx  AppBootScreen.tsx  ConfirmModal.tsx  ContinueWatchingRow.tsx  DebugOverlay.tsx  DetailsVinhetaFill.tsx  ErrorBoundary.tsx  ExitConfirmModal.tsx  GenreFilter.tsx  GlassPanel.tsx  GlobalLoader.tsx  HamburgerMenu.tsx  HeroBanner.tsx  HomeSkeleton.tsx  LazyFallback.tsx  LazyImage.tsx  MediaRow.tsx  (+29 more)
(+445 files in other folders)
